// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ListWithFilters > renders 1`] = `
<DocumentFragment>
  <div
    class="
        
      "
  >
    <div
      class="group/list-with-filters mx-auto bg-subtle"
    >
      <div
        class="
            sticky top-[calc(0px_+_var(--scroll-offset,0px))] z-sticky
            scroll-mt-[calc(0px_+_var(--scroll-offset,0px))] border-b
            border-default bg-default text-xs
            tablet:col-span-full
          "
      >
        <div
          class="
        mx-auto grid max-w-[var(--breakpoint-desktop)]
        grid-cols-[auto_auto_1fr_auto] items-baseline gap-y-7 px-container py-10
        font-sans font-medium tracking-wide text-subtle uppercase
        tablet:grid-cols-[auto_auto_1fr_auto_auto] tablet:gap-x-4
        tablet-landscape:grid-cols-[auto_auto_1fr_minmax(302px,calc(33%_-_192px))_auto]
        desktop:grid-cols-[auto_auto_1fr_calc(33%_-_96px)_auto]
      "
        >
          <span
            class="text-nowrap"
          >
            <span
              class="font-semibold text-default"
            >
              100
            </span>
            <span
              class="text-xxs leading-none tracking-wide"
            >
               Results
            </span>
          </span>
          <div
            class=""
          />
          <div
            class="
          col-span-full
          tablet:col-span-1 tablet:col-start-4
          desktop:pl-8
        "
          >
            <label
              class="
            flex items-baseline gap-x-4 text-xxs font-semibold tracking-wide
            text-subtle
          "
            >
              Sort 
              <select
                class="
              flex w-full appearance-none border-none bg-default py-2 pr-4 pl-4
              font-serif text-base font-normal tracking-normal overflow-ellipsis
              text-default shadow-all outline-accent
            "
              >
                <option
                  value="title-asc"
                >
                  Title (A → Z)
                </option>
                <option
                  value="title-desc"
                >
                  Title (Z → A)
                </option>
              </select>
            </label>
          </div>
          <button
            aria-controls="filters"
            aria-expanded="false"
            aria-label="Toggle filters"
            class="
          col-start-4 row-start-1 flex transform-gpu cursor-pointer items-center
          justify-center gap-x-4 bg-canvas px-4 py-2 text-nowrap text-muted
          uppercase shadow-all transition-transform
          hover:scale-110
          tablet:col-start-5 tablet:w-20
        "
            type="button"
          >
            Filter
          </button>
        </div>
      </div>
      <div
        class="
            mx-auto max-w-[var(--breakpoint-desktop)]
            gap-x-[var(--container-padding)]
            tablet:px-container
            tablet-landscape:flex
          "
      >
        <div
          class="
              mx-auto max-w-[var(--breakpoint-desktop)] grow
              scroll-mt-[calc(var(--list-scroll-offset)_+_var(--scroll-offset,0px))]
              pb-10
              [--list-scroll-offset:181px]
              tablet:[--list-scroll-offset:121px]
            "
          id="list"
        >
          <div
            data-testid="list"
          >
            Test List Content
          </div>
        </div>
        <div
          aria-hidden="true"
          class="
              invisible fixed inset-0 bg-[rgba(0,0,0,.4)] opacity-0
              transition-opacity duration-200
              tablet-landscape:hidden
              
            "
        />
        <div
          aria-label="Filters"
          class="
              fixed top-0 right-0 z-filter-drawer flex h-full max-w-[380px]
              flex-col items-start gap-y-5 bg-default text-left text-inverse
              duration-200 ease-in-out
              w-0 transform-[translateX(100%)] overflow-y-hidden
              tablet:gap-y-10
              tablet-landscape:relative tablet-landscape:z-auto
              tablet-landscape:col-start-4 tablet-landscape:block
              tablet-landscape:w-auto tablet-landscape:max-w-unset
              tablet-landscape:min-w-[320px] tablet-landscape:transform-none
              tablet-landscape:scroll-mt-[calc(25px_+_var(--scroll-offset,0px))]
              tablet-landscape:overflow-y-visible tablet-landscape:bg-inherit
              tablet-landscape:py-24 tablet-landscape:pb-12
              tablet-landscape:drop-shadow-none
              laptop:w-[33%]
            "
          id="filters"
        >
          <div
            class="
                flex h-full w-full flex-col text-sm
                tablet:pt-12 tablet:text-base
                tablet-landscape:h-auto tablet-landscape:overflow-visible
                tablet-landscape:bg-default tablet-landscape:px-container
                tablet-landscape:pt-0
                laptop:px-8
              "
          >
            <fieldset
              class="
                  flex grow flex-col gap-5 px-container pb-4
                  [--control-scroll-offset:calc(181px_+_var(--scroll-offset,0px))]
                  tablet:gap-8
                  tablet-landscape:mt-0 tablet-landscape:gap-12
                  tablet-landscape:px-0 tablet-landscape:py-10
                "
            >
              <legend
                class="
                    mb-5 block w-full pt-4 pb-4 text-lg text-subtle
                    shadow-bottom
                    tablet-landscape:mb-0 tablet-landscape:pt-10
                    tablet-landscape:pb-8 tablet-landscape:font-sans
                    tablet-landscape:text-xxs tablet-landscape:font-semibold
                    tablet-landscape:tracking-wide tablet-landscape:uppercase
                  "
              >
                Filter
              </legend>
              <div
                data-testid="filters-content"
              >
                <input
                  placeholder="Filter input"
                  type="text"
                />
                <button
                  type="button"
                >
                  Filter button
                </button>
              </div>
            </fieldset>
            <div
              class="
                  sticky bottom-0 z-filter-footer mt-auto w-full self-end
                  border-t border-t-default bg-default px-8 py-4 drop-shadow-2xl
                  tablet-landscape:hidden
                "
            >
              <button
                class="
                    flex w-full cursor-pointer items-center justify-center
                    gap-x-4 bg-footer px-4 py-3 font-sans text-xs text-nowrap
                    text-inverse uppercase
                    tablet-landscape:hidden
                  "
                type="button"
              >
                View 100 Results
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListWithFilters > when on mobile > opens and closes filter drawer 1`] = `
<div
  aria-label="Filters"
  class="
              fixed top-0 right-0 z-filter-drawer flex h-full max-w-[380px]
              flex-col items-start gap-y-5 bg-default text-left text-inverse
              duration-200 ease-in-out
              w-0 transform-[translateX(100%)] overflow-y-hidden
              tablet:gap-y-10
              tablet-landscape:relative tablet-landscape:z-auto
              tablet-landscape:col-start-4 tablet-landscape:block
              tablet-landscape:w-auto tablet-landscape:max-w-unset
              tablet-landscape:min-w-[320px] tablet-landscape:transform-none
              tablet-landscape:scroll-mt-[calc(25px_+_var(--scroll-offset,0px))]
              tablet-landscape:overflow-y-visible tablet-landscape:bg-inherit
              tablet-landscape:py-24 tablet-landscape:pb-12
              tablet-landscape:drop-shadow-none
              laptop:w-[33%]
            "
  id="filters"
>
  <div
    class="
                flex h-full w-full flex-col text-sm
                tablet:pt-12 tablet:text-base
                tablet-landscape:h-auto tablet-landscape:overflow-visible
                tablet-landscape:bg-default tablet-landscape:px-container
                tablet-landscape:pt-0
                laptop:px-8
              "
  >
    <fieldset
      class="
                  flex grow flex-col gap-5 px-container pb-4
                  [--control-scroll-offset:calc(181px_+_var(--scroll-offset,0px))]
                  tablet:gap-8
                  tablet-landscape:mt-0 tablet-landscape:gap-12
                  tablet-landscape:px-0 tablet-landscape:py-10
                "
    >
      <legend
        class="
                    mb-5 block w-full pt-4 pb-4 text-lg text-subtle
                    shadow-bottom
                    tablet-landscape:mb-0 tablet-landscape:pt-10
                    tablet-landscape:pb-8 tablet-landscape:font-sans
                    tablet-landscape:text-xxs tablet-landscape:font-semibold
                    tablet-landscape:tracking-wide tablet-landscape:uppercase
                  "
      >
        Filter
      </legend>
      <div
        data-testid="filters-content"
      >
        <input
          placeholder="Filter input"
          type="text"
        />
        <button
          type="button"
        >
          Filter button
        </button>
      </div>
    </fieldset>
    <div
      class="
                  sticky bottom-0 z-filter-footer mt-auto w-full self-end
                  border-t border-t-default bg-default px-8 py-4 drop-shadow-2xl
                  tablet-landscape:hidden
                "
    >
      <button
        class="
                    flex w-full cursor-pointer items-center justify-center
                    gap-x-4 bg-footer px-4 py-3 font-sans text-xs text-nowrap
                    text-inverse uppercase
                    tablet-landscape:hidden
                  "
        type="button"
      >
        View 
        100
         Results
      </button>
    </div>
  </div>
</div>
`;

exports[`ListWithFilters > when on mobile > opens and closes filter drawer 2`] = `
<div
  aria-label="Filters"
  class="
              fixed top-0 right-0 z-filter-drawer flex h-full max-w-[380px]
              flex-col items-start gap-y-5 bg-default text-left text-inverse
              duration-200 ease-in-out
              
                    bottom-0 w-full transform-[translateX(0)] overflow-y-auto
                    drop-shadow-2xl
                  
              tablet:gap-y-10
              tablet-landscape:relative tablet-landscape:z-auto
              tablet-landscape:col-start-4 tablet-landscape:block
              tablet-landscape:w-auto tablet-landscape:max-w-unset
              tablet-landscape:min-w-[320px] tablet-landscape:transform-none
              tablet-landscape:scroll-mt-[calc(25px_+_var(--scroll-offset,0px))]
              tablet-landscape:overflow-y-visible tablet-landscape:bg-inherit
              tablet-landscape:py-24 tablet-landscape:pb-12
              tablet-landscape:drop-shadow-none
              laptop:w-[33%]
            "
  id="filters"
>
  <div
    class="
                flex h-full w-full flex-col text-sm
                tablet:pt-12 tablet:text-base
                tablet-landscape:h-auto tablet-landscape:overflow-visible
                tablet-landscape:bg-default tablet-landscape:px-container
                tablet-landscape:pt-0
                laptop:px-8
              "
  >
    <fieldset
      class="
                  flex grow flex-col gap-5 px-container pb-4
                  [--control-scroll-offset:calc(181px_+_var(--scroll-offset,0px))]
                  tablet:gap-8
                  tablet-landscape:mt-0 tablet-landscape:gap-12
                  tablet-landscape:px-0 tablet-landscape:py-10
                "
    >
      <legend
        class="
                    mb-5 block w-full pt-4 pb-4 text-lg text-subtle
                    shadow-bottom
                    tablet-landscape:mb-0 tablet-landscape:pt-10
                    tablet-landscape:pb-8 tablet-landscape:font-sans
                    tablet-landscape:text-xxs tablet-landscape:font-semibold
                    tablet-landscape:tracking-wide tablet-landscape:uppercase
                  "
      >
        Filter
      </legend>
      <div
        data-testid="filters-content"
      >
        <input
          placeholder="Filter input"
          type="text"
        />
        <button
          type="button"
        >
          Filter button
        </button>
      </div>
    </fieldset>
    <div
      class="
                  sticky bottom-0 z-filter-footer mt-auto w-full self-end
                  border-t border-t-default bg-default px-8 py-4 drop-shadow-2xl
                  tablet-landscape:hidden
                "
    >
      <button
        class="
                    flex w-full cursor-pointer items-center justify-center
                    gap-x-4 bg-footer px-4 py-3 font-sans text-xs text-nowrap
                    text-inverse uppercase
                    tablet-landscape:hidden
                  "
        type="button"
      >
        View 
        100
         Results
      </button>
    </div>
  </div>
</div>
`;
